[gd_scene load_steps=25 format=3 uid="uid://7ostwb7x1ctw"]

[ext_resource type="Script" path="res://scenes/hunter.gd" id="1_v11uo"]
[ext_resource type="Texture2D" uid="uid://bbyyn2omtbg5k" path="res://graphics/enemies/hunter/parts/torso.png" id="2_6afo1"]
[ext_resource type="Texture2D" uid="uid://dveiihtbxopl8" path="res://graphics/enemies/hunter/parts/leg_front_inner.png" id="3_kcsiv"]
[ext_resource type="Texture2D" uid="uid://bvsqndjb57ct7" path="res://graphics/enemies/hunter/parts/leg_front_outer.png" id="4_oqo76"]
[ext_resource type="Texture2D" uid="uid://bwgay5vo48c2j" path="res://graphics/enemies/hunter/parts/claw.png" id="4_rjf28"]
[ext_resource type="Texture2D" uid="uid://dlhke72pg5vgd" path="res://graphics/enemies/hunter/parts/head.png" id="5_nca0q"]
[ext_resource type="Texture2D" uid="uid://blqwsas8yi3tm" path="res://graphics/enemies/hunter/parts/leg_back_inner.png" id="7_shxn3"]
[ext_resource type="Texture2D" uid="uid://dtcjoflktbmcq" path="res://graphics/enemies/hunter/parts/leg_back_outer.png" id="8_mdpwd"]
[ext_resource type="Texture2D" uid="uid://d2e5v1fvxnlju" path="res://graphics/explosions/grunge.png" id="9_wq7i8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fq842"]
radius = 38.0
height = 266.0

[sub_resource type="CircleShape2D" id="CircleShape2D_73x0j"]
radius = 1402.12

[sub_resource type="CircleShape2D" id="CircleShape2D_mv8v2"]
radius = 83.0542

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_538lw"]
resource_name = "Front right leg"
target_nodepath = NodePath("../Targets/FrontRight")
flip_bend_direction = true
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("Torso/RightFrontLeg")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("Torso/RightFrontLeg/RightFrontClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_lvl15"]
resource_name = "Front left leg"
target_nodepath = NodePath("../Targets/FrontLeft")
joint_one_bone_idx = 3
joint_one_bone2d_node = NodePath("Torso/LeftFrontLeg")
joint_two_bone_idx = 4
joint_two_bone2d_node = NodePath("Torso/LeftFrontLeg/LeftFrontClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_433yi"]
resource_name = "Back right leg"
target_nodepath = NodePath("../Targets/BackRight")
joint_one_bone_idx = 6
joint_one_bone2d_node = NodePath("Torso/RightBackLeg")
joint_two_bone_idx = 7
joint_two_bone2d_node = NodePath("Torso/RightBackLeg/RightBackClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_fdar8"]
resource_name = "Back left leg"
target_nodepath = NodePath("../Targets/BackLeft")
flip_bend_direction = true
joint_one_bone_idx = 8
joint_one_bone2d_node = NodePath("Torso/LeftBackLeg")
joint_two_bone_idx = 9
joint_two_bone2d_node = NodePath("Torso/LeftBackLeg/LeftBackClaw")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_jxcvm"]
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_538lw")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_lvl15")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_433yi")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_fdar8")

[sub_resource type="Animation" id="Animation_xio4c"]
resource_name = "walk"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Targets/FrontRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9, 1.3, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(79, -137), Vector2(102, -74), Vector2(64, -137), Vector2(118, -70), Vector2(79, -137)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Targets/FrontLeft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.9, 1.3, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-30, -127), Vector2(-61, -62), Vector2(-31, -122), Vector2(-60, -59)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Targets/BackRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.6, 1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(180, 142), Vector2(96, 206), Vector2(173, 134), Vector2(96, 206)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Targets/BackLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1, 1.3, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-118, 138), Vector2(-66, 194), Vector2(-126, 140), Vector2(-76, 182)]
}

[sub_resource type="Animation" id="Animation_ilgwb"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Torso/Head/RightClaw:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.13621, -0.42586, -0.42586, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/Head/LeftClaw:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.993092, 0.427606, 0.427606, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iyfnm"]
_data = {
"attack": SubResource("Animation_ilgwb"),
"walk": SubResource("Animation_xio4c")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mdsgh"]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_wnig4"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.168539), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hxyfi"]
curve = SubResource("Curve_wnig4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nvxnt"]
emission_shape = 1
emission_sphere_radius = 14.89
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 112.79
initial_velocity_max = 174.64
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.4
scale_max = 0.5
scale_curve = SubResource("CurveTexture_hxyfi")
anim_offset_max = 1.0

[node name="Hunter" type="CharacterBody2D"]
script = ExtResource("1_v11uo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, -67)
shape = SubResource("CapsuleShape2D_fq842")

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_73x0j")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -280)
shape = SubResource("CircleShape2D_mv8v2")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timers" type="Node" parent="."]

[node name="NavigationTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Skeleton2D" type="Skeleton2D" parent="."]
modification_stack = SubResource("SkeletonModificationStack2D_jxcvm")

[node name="Torso" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Torso2" type="Sprite2D" parent="Skeleton2D/Torso"]
position = Vector2(2, 0)
texture = ExtResource("2_6afo1")

[node name="RightFrontLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(25, -55)
rest = Transform2D(0.892681, 0.45045, -0.45045, 0.892681, 25, -55)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightFrontLeg"]
position = Vector2(25, -32)
scale = Vector2(0.964286, 0.964286)
texture = ExtResource("3_kcsiv")

[node name="RightFrontClaw" type="Bone2D" parent="Skeleton2D/Torso/RightFrontLeg"]
position = Vector2(47, -60)
rest = Transform2D(0.320509, -0.947108, 0.947108, 0.320509, 47, -60)
auto_calculate_length_and_angle = false
length = 93.111
bone_angle = -83.216
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightFrontLeg/RightFrontClaw"]
position = Vector2(46.6406, -35.0946)
texture = ExtResource("4_oqo76")

[node name="LeftFrontLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-38, -50)
rest = Transform2D(-0.0322777, -0.999415, 0.999415, -0.0322777, -38, -50)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftFrontLeg"]
position = Vector2(-24, -37)
scale = Vector2(-1, 1)
texture = ExtResource("3_kcsiv")

[node name="LeftFrontClaw" type="Bone2D" parent="Skeleton2D/Torso/LeftFrontLeg"]
position = Vector2(-44, -63)
rest = Transform2D(-0.361083, 0.932436, -0.932436, -0.361083, -44, -63)
auto_calculate_length_and_angle = false
length = 82.829
bone_angle = -101.307
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftFrontLeg/LeftFrontClaw"]
position = Vector2(-46.2334, -33.4856)
scale = Vector2(-1, 1)
texture = ExtResource("4_oqo76")

[node name="Head" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-2, -94)
rest = Transform2D(1, 0, 0, 1, -2, -94)
auto_calculate_length_and_angle = false
length = 118.809
bone_angle = -90.452

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(-5, -60)
texture = ExtResource("5_nca0q")

[node name="RightClaw" type="Node2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(17, -71)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head/RightClaw"]
position = Vector2(23, -44)
texture = ExtResource("4_rjf28")

[node name="LeftClaw" type="Node2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(-25, -69)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head/LeftClaw"]
position = Vector2(-24, -45)
scale = Vector2(-1, 1)
texture = ExtResource("4_rjf28")

[node name="RightBackLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(23, 25)
rest = Transform2D(0.326021, -0.945323, 0.945323, 0.326021, 23, 25)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightBackLeg"]
position = Vector2(19, 33)
texture = ExtResource("7_shxn3")

[node name="RightBackClaw" type="Bone2D" parent="Skeleton2D/Torso/RightBackLeg"]
position = Vector2(38, 70)
rest = Transform2D(0.0484469, 0.99876, -0.99876, 0.0484469, 38, 70)
auto_calculate_length_and_angle = false
length = 118.814
bone_angle = 61.508
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightBackLeg/RightBackClaw"]
position = Vector2(31, 45)
texture = ExtResource("8_mdpwd")

[node name="LeftBackLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-31, 22)
rest = Transform2D(0.692472, 0.721404, -0.721404, 0.692472, -31, 22)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftBackLeg"]
position = Vector2(-18, 34)
rotation = 3.14159
scale = Vector2(1, -1)
texture = ExtResource("7_shxn3")
metadata/_edit_lock_ = true

[node name="LeftBackClaw" type="Bone2D" parent="Skeleton2D/Torso/LeftBackLeg"]
position = Vector2(-36, 71)
rest = Transform2D(0.338346, -0.940986, 0.940986, 0.338346, -36, 71)
auto_calculate_length_and_angle = false
length = 113.674
bone_angle = 112.161
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftBackLeg/LeftBackClaw"]
position = Vector2(-31, 43)
scale = Vector2(-1, 1)
texture = ExtResource("8_mdpwd")

[node name="Targets" type="Node2D" parent="."]
position = Vector2(-27, -24)
metadata/_edit_lock_ = true

[node name="FrontRight" type="Marker2D" parent="Targets"]
position = Vector2(79, -137)

[node name="FrontLeft" type="Marker2D" parent="Targets"]
position = Vector2(-60, -59)

[node name="BackLeft" type="Marker2D" parent="Targets"]
position = Vector2(-76, 182)

[node name="BackRight" type="Marker2D" parent="Targets"]
position = Vector2(152, 163.333)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iyfnm")
}

[node name="Particles" type="Node2D" parent="."]

[node name="HitParticles" type="GPUParticles2D" parent="Particles"]
modulate = Color(0.0196078, 0.0980392, 0.0862745, 0.682353)
material = SubResource("CanvasItemMaterial_mdsgh")
position = Vector2(-1, -114)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_nvxnt")
texture = ExtResource("9_wq7i8")
lifetime = 0.5
one_shot = true

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/NavigationTimer" to="." method="_on_navigation_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
